--- a/src/components/todoList/todo.scss
+++ b/src/components/todoList/todo.scss
@@ -3,21 +3,17 @@
   align-items:flex-start ;  
   list-style-type: none;
 }
+.todoList__span{
+  text-decoration: line-through;
+} 
 
-.todoList__buttons{
-    display: flex;
-    justify-content: flex-end;
-    margin-top:-20px ;
-  }
-
-  .todoList__span{
-    text-decoration: line-through;
-  }
-  .todoList__li{
-    cursor: pointer;
-  }
- 
-
+.todoList__li{  
+  border: 1px solid black;
+  padding: 5px;  
+  margin:4px;   
+  cursor: pointer;
+  user-select: none;
+}
   
 @media only screen and (max-width: 600px) {
   .btn-todo{   
@@ -27,8 +23,7 @@
   } 
   .todoList__li{  
     margin-left: -35px;      
-  }
-  
+  }    
   .todoList{
     margin-left:0px
   }   
