--- a/src/components/todoList/todo.scss
+++ b/src/components/todoList/todo.scss
@@ -10,9 +10,11 @@
 .todoList__li{  
   border: 1px solid black;
   padding: 5px;  
-  margin:4px;   
+  margin:4px;     
   cursor: pointer;
   user-select: none;
+  text-decoration: none;
+  color: black;
 }
   
 @media only screen and (max-width: 600px) {
@@ -28,7 +30,5 @@
     margin-left:0px
   }   
 }
-
-
 
 
