--- a/src/components/section/section.scss
+++ b/src/components/section/section.scss
@@ -1,13 +1,13 @@
 
 .section{
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   margin-top: 20px;
+  margin-right:10px;
 }
 
 .section__entry{
-  width: 100%;
-  margin-left: 194px;
+  width: 60%;
   font-size: 20px;
 }
 
@@ -22,6 +22,12 @@
   line-height: 1.5;
   border-radius: .25rem;
 } 
+
+@media only screen and (max-width:768px){
+  .section__entry{
+    width: 57%;   
+  }
+}
 
 @media only screen and (max-width: 600px) {
   .section{    
